--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería de imágenes</title>
+    <title>Test de ishihara</title>
+    <link rel="icon" href="https://img.utdstc.com/icon/fd5/ea6/fd5ea689f3ec06cb0414d8dfa4266fa889015e5e1ed897eda5ef6eed53f28a08:200" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
